--- a/src/IressPro.Packager/Views/SettingsEditor.xaml
+++ b/src/IressPro.Packager/Views/SettingsEditor.xaml
@@ -92,28 +92,29 @@
             </Label>
 
             <Label     Grid.Row="0" Grid.Column="0" Content="_Local Staging Root Folder"  Target="{Binding ElementName=tbxStagingRoot}" />
-            <TextBox   Grid.Row="0" Grid.Column="1" x:Name="tbxStagingRoot"   Text="C:\IressSetup\????????" TextChanged="onTextChanged" MouseDoubleClick="onCreateDir" BorderThickness="1" />
             <Label     Grid.Row="1" Grid.Column="0" Content="_Package Process Folder"     Target="{Binding ElementName=tbxPkgPrcsFolder}" />
-            <TextBox   Grid.Row="1" Grid.Column="1" x:Name="tbxPkgPrcsFolder" Text="C:\IressSetup\????????" TextChanged="onTextChanged" MouseDoubleClick="onCreateDir" BorderThickness="1" />
             <Label     Grid.Row="2" Grid.Column="0" Content="_Version Delimiter"          Target="{Binding ElementName=tbxVersionDelimeter}" />
+            <Label     Grid.Row="3" Grid.Column="0" Content="_Source Folders: &#10;                     Iress"     Target="{Binding ElementName=tbxIrsSrcFolder}" />            
+            <Label     Grid.Row="4" Grid.Column="0" Content="_IOS+"                       Target="{Binding ElementName=tbxIosSrcFolder}" />            
+            <Label     Grid.Row="5" Grid.Column="0" Content="_Retail"                     Target="{Binding ElementName=tbxRtlSrcFolder}" />            
+            <Label     Grid.Row="6" Grid.Column="0" Content="_IPS"                        Target="{Binding ElementName=tbxIpsSrcFolder}" />            
+            <Label     Grid.Row="7" Grid.Column="0" Content="_Registry"                   Target="{Binding ElementName=tbxAuxSrcFolder}" />            
+            <Label     Grid.Row="8" Grid.Column="0" Content="S_elf-cont"                  Target="{Binding ElementName=tbxSlfSrcFolder}" />
+
+            <TextBox   Grid.Row="0" Grid.Column="1" x:Name="tbxStagingRoot"   Text="C:\IressSetup\????????" TextChanged="onTextChanged" MouseDoubleClick="onCreateDir" BorderThickness="1" />
+            <TextBox   Grid.Row="1" Grid.Column="1" x:Name="tbxPkgPrcsFolder" Text="C:\IressSetup\????????" TextChanged="onTextChanged" MouseDoubleClick="onCreateDir" BorderThickness="1" />
             <TextBox   Grid.Row="2" Grid.Column="1" x:Name="tbxVersionDelimeter" Text="?" Width="120" HorizontalAlignment="Left" />
+            <TextBox   Grid.Row="3" Grid.Column="1" x:Name="tbxIrsSrcFolder" Text="Y:\Source Folder\????????" TextChanged="onTextChanged" MouseDoubleClick="onCreateDir" BorderThickness="1" VerticalAlignment="Bottom" Margin="0 3" />
+            <TextBox   Grid.Row="4" Grid.Column="1" x:Name="tbxIosSrcFolder" Text="Y:\Source Folder\????????" TextChanged="onTextChanged" MouseDoubleClick="onCreateDir" BorderThickness="1" />
+            <TextBox   Grid.Row="5" Grid.Column="1" x:Name="tbxRtlSrcFolder" Text="Y:\Source Folder\????????" TextChanged="onTextChanged" MouseDoubleClick="onCreateDir" BorderThickness="1" />
+            <TextBox   Grid.Row="6" Grid.Column="1" x:Name="tbxIpsSrcFolder" Text="Y:\Source Folder\????????" TextChanged="onTextChanged" MouseDoubleClick="onCreateDir" BorderThickness="1" />
+            <TextBox   Grid.Row="7" Grid.Column="1" x:Name="tbxAuxSrcFolder" Text="Y:\Source Folder\????????" TextChanged="onTextChanged" MouseDoubleClick="onCreateDir" BorderThickness="1" />
+            <TextBox   Grid.Row="8" Grid.Column="1" x:Name="tbxSlfSrcFolder" Text="Y:\Source Folder\????????" TextChanged="onTextChanged" MouseDoubleClick="onCreateDir" BorderThickness="1" />
+
             <CheckBox  Grid.Row="0" Grid.Column="3" x:Name="cbxAutoOpenResults" Content="_Auto Open Results" />
             <CheckBox  Grid.Row="1" Grid.Column="3" x:Name="cbxAutoCopyToDrivY" Content="_Auto Copy to Y:"   />
             <CheckBox  Grid.Row="2" Grid.Column="3" x:Name="cbxAutoOpenResul_0" Content="option _3" />
 
-            <Label     Grid.Row="3" Grid.Column="0" Content="Soirce Folders: &#10;                     Iress"     Target="{Binding ElementName=tbxIrsSrcFolder}" />            
-            <Label     Grid.Row="4" Grid.Column="0" Content="IOS+"      Target="{Binding ElementName=tbxIosSrcFolder}" />            
-            <Label     Grid.Row="5" Grid.Column="0" Content="Retail"    Target="{Binding ElementName=tbxRtlSrcFolder}" />            
-            <Label     Grid.Row="6" Grid.Column="0" Content="IPS"       Target="{Binding ElementName=tbxIpsSrcFolder}" />            
-            <Label     Grid.Row="7" Grid.Column="0" Content="Auxiliary" Target="{Binding ElementName=tbxAuxSrcFolder}" />            
-            <Label     Grid.Row="8" Grid.Column="0" Content="Self-cont" Target="{Binding ElementName=tbxSlfSrcFolder}" />
-
-            <TextBox   Grid.Row="3" Grid.Column="1" x:Name="tbxIrsSrcFolder" Text="C:\IressSetup\????????" TextChanged="onTextChanged" MouseDoubleClick="onCreateDir" BorderThickness="1" VerticalAlignment="Bottom" Margin="0 3" />
-            <TextBox   Grid.Row="4" Grid.Column="1" x:Name="tbxIosSrcFolder" Text="C:\IressSetup\????????" TextChanged="onTextChanged" MouseDoubleClick="onCreateDir" BorderThickness="1" />
-            <TextBox   Grid.Row="5" Grid.Column="1" x:Name="tbxRtlSrcFolder" Text="C:\IressSetup\????????" TextChanged="onTextChanged" MouseDoubleClick="onCreateDir" BorderThickness="1" />
-            <TextBox   Grid.Row="6" Grid.Column="1" x:Name="tbxIpsSrcFolder" Text="C:\IressSetup\????????" TextChanged="onTextChanged" MouseDoubleClick="onCreateDir" BorderThickness="1" />
-            <TextBox   Grid.Row="7" Grid.Column="1" x:Name="tbxAuxSrcFolder" Text="C:\IressSetup\????????" TextChanged="onTextChanged" MouseDoubleClick="onCreateDir" BorderThickness="1" />
-            <TextBox   Grid.Row="8" Grid.Column="1" x:Name="tbxSlfSrcFolder" Text="C:\IressSetup\????????" TextChanged="onTextChanged" MouseDoubleClick="onCreateDir" BorderThickness="1" />
             <!--
             <Label     Grid.Row="9" Grid.Column="0" Content="Folder"     Target="{Binding ElementName=tbxPkgPrcsFolder}" />            <TextBox   Grid.Row="9" Grid.Column="1" Text="C:\IressSetup\????????" Grid.ColumnSpan="1"  />
             <Label    Grid.Row="10" Grid.Column="0" Content="Folder"     Target="{Binding ElementName=tbxPkgPrcsFolder}" />            <TextBox  Grid.Row="10" Grid.Column="1" Text="C:\IressSetup\????????" Grid.ColumnSpan="1"  />
