Minor UI tweaks along with a quick ReadMe edit.

--- a/src/IressPro.Packager/Views/SettingsEditor.xaml
+++ b/src/IressPro.Packager/Views/SettingsEditor.xaml
@@ -63,7 +63,7 @@
       </StackPanel>
 
       <Border Grid.Row="1" CornerRadius="4" BorderBrush="#4888" Background="#1888" Padding="5" Margin="5" BorderThickness=".5">
-        <ScrollViewer>
+        <ScrollViewer VerticalScrollBarVisibility="Auto">
           <Grid >
             <Grid.ColumnDefinitions>
               <ColumnDefinition Width="185"/>
