--- a/src/IressPro.Packager/Views/MainWindowIP.xaml
+++ b/src/IressPro.Packager/Views/MainWindowIP.xaml
@@ -71,9 +71,9 @@
 
       <TextBlock Text="Ver 0.10" VerticalAlignment="Bottom" HorizontalAlignment="Right" Foreground="#8888" Margin="5" x:Name="tbkVer" />
       
-      <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0 0 0 0">
+      <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0 -4 0 0">
         <Menu Background="Transparent" x:Name="menu1" VerticalAlignment="Stretch" Margin="0 0 0 4">
-          <MenuItem Header="Target Fodlers"             ToolTip="Open Exolorer at the target folder"  Click="onExplorerTargetFolders" Width="100" Background="Transparent" BorderThickness="0" />
+          <MenuItem Header="Target _Fodlers"             ToolTip="Open Exolorer at the target folder"  Click="onExplorerTargetFolders" Width="100" Background="Transparent" BorderThickness="0" />
           <MenuItem IsCheckable="True" x:Name="mnuAutoOpenResults2" Header="Auto _Open Results" Checked="onChkd2" Unchecked="onChkd2" Width="125" Background="Transparent" BorderThickness="0" />
           <MenuItem IsCheckable="True" x:Name="mnuAutoCopyToDrivY2" Header="Auto _Copy to Y:  " Checked="onChkd2" Unchecked="onChkd2" Width="125" Background="Transparent" BorderThickness="0" />
           <MenuItem Header="° ° °" ToolTip="Click to adjust file locations and other settings" Height="30" Padding="10 10 10 4">
@@ -85,7 +85,7 @@
           </MenuItem>
         </Menu>
         <View:ThemeSelectorUsrCtrl x:Name="themeSelector1" Height="30" VerticalAlignment="Top" Margin="0" />
-        <Button Content=" X " IsCancel="True" Click="onExit" VerticalAlignment="Top" Margin="10 -5 -5 10" Foreground="#d21" BorderBrush="Transparent" ToolTip="Close the Application" />
+        <Button Content=" X " IsCancel="True" Click="onExit" VerticalAlignment="Top" Margin="10 -3 -5 10" Foreground="#d21" BorderBrush="Transparent" ToolTip="Close the Application" />
       </StackPanel>
 
 
