--- a/src/IressPro.Packager/Views/SettingsEditor.xaml
+++ b/src/IressPro.Packager/Views/SettingsEditor.xaml
@@ -232,6 +232,12 @@
                 <Image Source="/Assets/33px-Flag_of_the_United_Kingdom.webp"/>
               </MenuItem.Icon>
             </MenuItem>
+            <Separator/>
+            <MenuItem Tag="exp" Header="E_xprerimental" ToolTip="E_xprerimental Kingdom office"  Click="onSetDefaults" >
+              <MenuItem.Icon>
+                <Image Source="/Assets/33px-Flag_of_Canada.png"/>
+              </MenuItem.Icon>
+            </MenuItem>
           </MenuItem>
         </Menu>
 
